samples/_failures_safe/1761002413_1a15e0_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2b4c04ce.c: In function ‘main’:
./samples/SAFE/__tmp_2b4c04ce.c:162:17: error: expected declaration or statement at end of input
  162 |                 printf("Result of addition:\n");
      |                 ^~~~~~
./samples/SAFE/__tmp_2b4c04ce.c:162:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_2b4c04ce.c:162:17: error: expected declaration or statement at end of input
